Fix HTML formatting and structure in profile.html

--- a/profile.html
+++ b/profile.html
@@ -12,7 +12,7 @@
         <input id="album-title" placeholder="Album title">
         <input id="album-cover" placeholder="Cover image URL">
         <input id="album-spotify" placeholder="Spotify link (optional)">
-        <input id="album-ytmusic" placeholder="YouTube Music link (optional)">
+        <input id="album-ytmusic" placeholder="YouTube Music link (optional)"><br>
         <button type="submit">Add Album</button>
       </div>
       <br><br>
@@ -43,3 +43,4 @@
 
 </body>
 </html>
+
