--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
   <br><br>
   <h2>find an account:</h2>
   <form onsubmit="goToAccount(event)">
-    <input type="text" id="searched-user">
+    <input type="text" id="searched-user"><br>
     <button type="button" onclick="goToAccount()">find user</button>
   </form>
   
@@ -40,4 +40,5 @@
   <script src="js/homepage.js"></script>
 </body>
 </html>
+
 
