--- a/index.html
+++ b/index.html
@@ -18,7 +18,11 @@
     <h2><a href="#" id="logout-link" style="display:block">log out</a></h2>
     <h2><a id="profile-link" style="display:block">go to my account</a></h2>
   </div>
-
+  
+  <a href="faq.html">
+    <h2>FAQ</h2>
+  </a>
+  
   <br><br>
   <h2>find an account:</h2>
   <form onsubmit="goToAccount(event)">
@@ -40,3 +44,4 @@
   <script src="js/homepage.js"></script>
 </body>
 </html>
+
