--- a/faq.html
+++ b/faq.html
@@ -40,6 +40,13 @@
     and clicking "Copy Image Link" or "Open Image in New Tab" and copying that URL. Alternatively, you can do this same
     process with a version of the cover found on something like Google Images.
   </p>
-
+  
+  <h2 class="question">Contact Me</h2>
+  <p class="answer">
+    <b>Phone Number:</b> (908)-616-2351<br>
+    <b>Email:</b> tommartin2085@gmail.com<br>
+  </p>
+  
 </body>
+
 </html>
