--- a/profile.html
+++ b/profile.html
@@ -39,7 +39,9 @@
   </a>
   <h1 id="user-title"></h1>
   <main id="grid"></main>
-
+  <h1 id="badge-title">BADGES</h1>
+  <div id="badge-container">
+  </div>
   <!-- Supabase library -->
   <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
 
