--- a/index.html
+++ b/index.html
@@ -33,6 +33,16 @@
   <ul id="user-list">
   </ul>
 
+
+  <h2>our most popular album:</h2>
+  <img id="most-popular-album-cover" src="">
+  <h3 id="most-popular-album-name"></h3>
+  <h3 id="most-popular-album-artist"></h3>
+  <h3 id="most-popular-album-entry-count"></h3>
+  <h2>our most popular artist:</h2>
+  <h3 id="most-popular-artist-name"></h3>
+  <h3 id="most-popular-artist-entry-count"></h3>
+
   <!-- Supabase library -->
   <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
 
