--- a/faq.html
+++ b/faq.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8">
   <title>PEAKEST.NET</title>
   <link rel="stylesheet" href="styles.css">
+  <link rel="icon" type="image/x-icon" href="/logos/favicon.png">
 </head>
 <body class="page-centered">
   <a href="index.html" class="site-title">
@@ -48,4 +49,5 @@
   </p>
 
 </body>
+
 </html>
