--- a/login.html
+++ b/login.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8">
   <title>PEAKEST.LOGIN</title>
   <link rel="stylesheet" href="styles.css">
+  <link rel="icon" type="image/x-icon" href="/logos/favicon.png">
 </head>
 
 <body class="page-centered">
@@ -30,3 +31,4 @@
 
 </body>
 </html>
+
