--- a/profile.html
+++ b/profile.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8">
   <title>PEAKEST.NET</title>
   <link rel="stylesheet" href="styles.css">
+  <link rel="icon" type="image/x-icon" href="/logos/favicon.png">
 </head>
 <body class="page-profile">
   <form id="add-album-form" style="display:none">
@@ -56,3 +57,4 @@
 
 </body>
 </html>
+
