--- a/faq.html
+++ b/faq.html
@@ -15,7 +15,7 @@
   <h2 class="question">How do I add an album to my account?</h2>
   <p class="answer">
     First, search up an album in the "Search Albums..." field. Select the album you are trying to add.
-    This will autofill the name and cover URL of the album. Then, add a link to the album on Youtube Music 
+    This will autofill the name, artist and cover URL of the album. Then, add a link to the album on Youtube Music 
     and/or Spotify (support for more platforms coming soon!) and click add. The album will now appear to visible
     to anyone who visits your account.
   </p>  
@@ -28,8 +28,8 @@
   
   <h2 class="question">How do I edit an album on my account?</h2>
   <p class="answer">
-    Hover over or tap the album on your account, then tap or click the "✎" icon. A menu will appear where you can edit
-    the album. Click "Save" to apply changes.
+    Hover over or tap the album on your account, then tap or click the "✎" icon. A menu will appear where you 
+    can edit the album. Click "Save" to apply changes.
   </p>
   
   <h2 class="question">How do I fix a blank / broken album cover?</h2>
